--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -4,6 +4,13 @@ Please add new items on the top, move older items to old_news.txt
 Comment irrelevant stuff out
 
 ////
+*November 2023*::
+      Playback Vertical Slice almost complete.
+      +
+      Why Continue?
+      +
+      link:/project/news/DevReport-23-11.html[2023 Development Report]
+
 *September 2022*::
       Playback Vertical Slice planned.
       +
