Date of next developers meeting (11.Sept.2024)
...and add a note to mention the offline, in-person meeting at the FrOSCon conference

--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -5,7 +5,7 @@ Comment irrelevant stuff out
 
 ////
 *November 2023*::
-      Playback Vertical Slice almost complete.
+      Playback Vertical Slice made good progress.
       +
       Why Continue?
       +
